--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "callback": "node main.js",
+    "async-await": "node main-async-await.js"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "request": "^2.88.2"
